# ethancedwards-api

./: .dockerignore  .envrc  .gitignore  Dockerfile  TODO  default.nix  docker-compose.yml  ethancedwards_quotes.py  flake.nix  pyproject.toml  quotes.json  result  setup.py
.github/workflows/: build.yml  docker-image.yml
ethancedwards_api/: __init__.py  __main__.py  server.py
ethancedwards_api/audiofeed/: audiofeed.py
ethancedwards_api/congress/: congress.py
ethancedwards_api/jobs/: jobs.py
ethancedwards_api/nixpkgs/: nixpkgs.py
ethancedwards_api/podcast/: podcast.py
ethancedwards_api/quotes/: quotes.json  quotes.py
ethancedwards_api/videoserver/: videoserver.py
ethancedwards_api/zotero/: zotero.py
src/: ethancedwards_api.py
src/audiofeed/: audiofeed.py
src/congress/: congress.py
src/podcast/: podcast.py
src/quotes/: quotes.json  quotes.py
