[project]
name = "ethancedwards-api"
version = "0.1.0"
description = "Internal API for my needs"
authors = [{ name = "Ethan Carter Edwards", email = "ethan@ethancedwards.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "flask>=3.1.0,<4",
    "flask-restful>=0.3.10,<0.4",
    "yt-dlp>=2024.12.23,<2025",
    "podgen>=1.1.0,<2",
    "feedparser>=6.0.11,<7",
    "pygeocodio>=1.4.0,<2",
    "python-jobspy>=1.1.76,<2",
]

[project.scripts]
start = "ethancedwards_api:main"

[tool.hatch.build.targets.sdist]
include = ["ethancedwards_api"]

[tool.hatch.build.targets.wheel]
include = ["ethancedwards_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
